Swagger - OpenAPI.
Throws bunch of WARNS from org.reflections.Reflections at startup and when swagger endpoint for the first time is hit, otherwise everything seems to work. There is an error reported for that to dropwizard (?)